--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.4.5",
+    "@react-navigation/native": "^5.4.0",
+    "@react-navigation/stack": "^5.3.9",
     "react": "16.11.0",
-    "react-native": "^0.62.2"
+    "react-native": "^0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "^1.0.2",
+    "react-native-screens": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -22,6 +29,8 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "react-devtools": "^4.6.0",
+    "react-native-swiper": "^1.6.0",
+    "react-navigation": "^4.3.9",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
