--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "^0.62.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-safe-area-context": "^1.0.2",
-    "react-native-screens": "^2.7.0"
+    "react-native-screens": "^2.7.0",
+    "react-native-webview": "^9.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
